# scigraphics

./: .gitignore  CMakeLists.txt  README  README.md  build.bat  build.sh  test.cpp
source/example/: CMakeLists.txt  exampleAddPoints.cpp  exampleAnimation.cpp  exampleAnimation.h  exampleBenchmark.cpp  exampleGeneral.cpp  exampleImagemagick.cpp  exampleManager.cpp  exampleMap.cpp  exampleQtImage.cpp  exampleSimple.cpp
source/graphics/: CMakeLists.txt  axis.cpp  axis.h  axislabels.cpp  axislabels.h  axisset.cpp  axisset.h  axisticks.cpp  axisticks.h  axistitle.cpp  axistitle.h  brushstyle.h  color.cpp  color.h  container_ptr.h  cursorpoint.cpp  cursorpoint.h  datageneral.h  datamap.cpp  datamap.h  datasequence.cpp  datasequence.h  drawer.cpp  drawer.h  errorbarstyle.h  floatrect.cpp  floatrect.h  geometry.h  graph.cpp  graph.h  graphcollection.h  graphmap.cpp  graphmap.h  graphsequence.cpp  graphsequence.h  graphviewcollection.cpp  graphviewcollection.h  graphviewmap.cpp  graphviewmap.h  graphviewsequence.cpp  (+39 more)
source/graphics/imagemagick/: CMakeLists.txt  implot.cpp  implot.h
source/graphics/qt4/: CMakeLists.txt  labelinput.cpp  qt4plot.cpp  qt4plot.h  qt4plotmanager.h  qt4plotsettings.cpp  qt4plotsettings.h
source/scigraphics/: CMakeLists.txt  axis.cpp  axis.h  axislabels.cpp  axislabels.h  axisposition.h  axisset.cpp  axisset.h  axisticks.cpp  axisticks.h  axistitle.cpp  axistitle.h  brushstyle.cpp  brushstyle.h  color.cpp  color.h  container_ptr.h  container_type_ptr.h  cursorpoint.cpp  cursorpoint.h  datageneral.h  dataiterator.h  datamap.cpp  datamap.h  datasequence.cpp  datasequence.h  drawer.cpp  drawer.h  errorbarstyle.cpp  errorbarstyle.h  floatrect.cpp  floatrect.h  geometry.h  graph.cpp  graph.h  graphcollection.cpp  graphcollection.h  graphmap.cpp  graphmap.h  graphsequence.cpp  (+51 more)
source/scigraphics/imagemagick/: CMakeLists.txt  drawer.cpp  drawer.h  implot.cpp  implot.h  plot.cpp  plot.h
source/scigraphics/qt4/: CMakeLists.txt  debugprint.cpp  debugprint.h  drawer.cpp  drawer.h  labeledline.cpp  labeledline.h  labelinput.cpp  labelinput.h  manager.cpp  manager.h  mousecallback.cpp  mousecallback.h  plot.cpp  plot.h  plotimage.cpp  plotimage.h  plotview.cpp  plotview.h  qt4plot.cpp  qt4plot.h  qt4plotmanager.cpp  qt4plotmanager.h  qt4plotsettings.cpp  qt4plotsettings.h  settings.cpp  settings.h  settingsbox.cpp  settingsbox.h  settingsbox_ru.ts  settingscomposer.cpp  settingscomposer.h
source/tests/: CMakeLists.txt  cpptest2gtest.pl  gtest_color.cpp  gtest_geometry.cpp  gtest_graph.cpp  gtest_graphcollection.cpp  gtest_graphdata.cpp  gtest_graphviewsequence.cpp  gtest_interval.cpp  gtest_legend.cpp  gtest_marker.cpp  gtest_numberlimits.cpp  gtest_painter.cpp  gtest_plotlimits.cpp  gtest_scale.cpp  gtest_settings.cpp  mockpainter.cpp  mockpainter.h  testMain.cpp  test_color.cpp  test_color.h  test_geometry.cpp  test_geometry.h  test_graph.cpp  test_graph.h  test_graphcollection.cpp  test_graphcollection.h  test_graphdata.cpp  test_graphdata.h  test_legend.cpp  test_legend.h  test_marker.cpp  test_marker.h  test_numberlimits.cpp  test_numberlimits.h  test_painter.cpp  test_painter.h  test_plotlimits.cpp  test_plotlimits.h  test_scale.cpp  (+1 more)
